syntax = "proto3";

package gocica.v1;

option go_package = "github.com/mazrean/gocica/proto/gocica/v1";

// IndexEntry is a single entry in the index.
message IndexEntry {
  string disk_path = 1;
  string output_id = 2;
  int64 size = 3;
  int64 timenano = 4;
}
